--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -979,3 +979,68 @@
 	url = {http://dx.doi.org/10.1002/fsh.10097},
 	langid = {en}
 }
+
+@article{lima2022,
+	title = {Literature review and bibliometric analysis on data-driven assessment of landslide susceptibility},
+	author = {Lima, Pedro and Steger, Stefan and Glade, Thomas and {Murillo-García}, Franny G.},
+	year = {2022},
+	month = {06},
+	date = {2022-06},
+	journal = {Journal of Mountain Science},
+	pages = {1670--1698},
+	volume = {19},
+	number = {6},
+	doi = {10.1007/s11629-021-7254-9},
+	url = {http://dx.doi.org/10.1007/s11629-021-7254-9},
+	langid = {en}
+}
+
+@inproceedings{Skempton1957,
+        author = {Skempton, A. W. and deLory, F. A.},
+        title = {Stability of Natural Slopes in London Clay},
+        booktitle = {4th International Conference on Soil Mechanics and Foundation Engineering, Earth Dams, Slopes and Open Excavations},
+        year = {1957}
+}
+@article{patton2018a,
+	title = {Predicting soil thickness on soil mantled hillslopes},
+	author = {Patton, Nicholas R. and Lohse, Kathleen A. and Godsey, Sarah E. and Crosby, Benjamin T. and Seyfried, Mark S.},
+	year = {2018},
+	month = {08},
+	date = {2018-08-20},
+	journal = {Nature Communications},
+	volume = {9},
+	number = {1},
+	doi = {10.1038/s41467-018-05743-y},
+	url = {http://dx.doi.org/10.1038/s41467-018-05743-y},
+	langid = {en}
+}
+
+@article{iida1999,
+	title = {A stochastic hydro-geomorphological model for shallow landsliding due to rainstorm},
+	author = {Iida, T.},
+	year = {1999},
+	month = {02},
+	date = {1999-02},
+	journal = {CATENA},
+	pages = {293--313},
+	volume = {34},
+	number = {3-4},
+	doi = {10.1016/s0341-8162(98)00093-9},
+	url = {http://dx.doi.org/10.1016/S0341-8162(98)00093-9},
+	langid = {en}
+}
+
+@article{turner2010a,
+	title = {Landslide densities associated with rainfall, stand age, and topography on forested landscapes, southwestern Washington, USA},
+	author = {Turner, Ted R. and Duke, Steven D. and Fransen, Brian R. and Reiter, Maryanne L. and Kroll, Andrew J. and Ward, Jim W. and Bach, Janette L. and Justice, Tiffany E. and Bilby, Robert E.},
+	year = {2010},
+	month = {05},
+	date = {2010-05},
+	journal = {Forest Ecology and Management},
+	pages = {2233--2247},
+	volume = {259},
+	number = {12},
+	doi = {10.1016/j.foreco.2010.01.051},
+	url = {http://dx.doi.org/10.1016/j.foreco.2010.01.051},
+	langid = {en}
+}
