--- a/analysis/mlr3_workflow.qmd
+++ b/analysis/mlr3_workflow.qmd
@@ -10,7 +10,7 @@ params:
     input: text
   training_data:
     label: Training data .Rdata file
-    value:  sample_umpqua.Rdata
+    value:  sample_wilson.Rdata
     input: text
   points:
     label: Training data points
@@ -33,14 +33,16 @@ knitr::opts_chunk$set(
 
 ```{r}
 #| echo: false
-load(paste0(params$data_dir, params$training_data))
-pnts <- vect(paste0(params$data_dir, params$points))
-dem <- rast(paste0(params$data_dir, params$dem))
+# load(paste0(params$data_dir, params$training_data))
+# pnts <- vect(paste0(params$data_dir, params$points))
+# dem <- rast(paste0(params$data_dir, params$dem))
+source("../R/create_model_dataframe.R")
+sample_pnts <- training_data
 ```
 
 ## Workflow for the mlr3 package
 
-This is a document where I work out how to use the `mlr3` package. According to Dan, this is package ecosystem has been taking over for `caret`.
+This is a document where I work out how to use the `mlr3` package. This package ecosystem is more modern and agile than the `caret` package, although because it is newer it has a smaller user base and a little bit less online resources.
 
 ```{r load, include = FALSE}
 library(mlr3)
@@ -49,7 +51,8 @@ library(mlr3spatiotempcv)
 library(mlr3learners)
 library(mlr3tuning)
 library(mlr3viz)
-# Packages for models - change these based on what type of model you build
+
+# Packages for model-building
 library(glmnet)
 library(ranger)
 ```
@@ -67,7 +70,7 @@ mlr_learners
 Our task leaves out the `id` column in the sample_pnts data frame, as it will not be relevant information for the model! Specifying the target says what we want the learner to predict - for us, this is the `class` which is positive for landslide initiation points.
 
 ```{r}
-task <- as_task_classif(x = sample_pnts[, 2:8], id = "landslide_init", target = "class")
+task <- as_task_classif(x = sample_pnts[, 2:10], id = "landslide_init", target = "class")
 head(task)
 ```
 
@@ -181,7 +184,7 @@ print(predicted$score(msrs(c("classif.auc", "classif.acc"))))
 print(predicted$confusion)
 ```
 
-## Step 3. Comparing spatiotemporal cross-validation vs normal cross-validation. 
+## Step 3. Comparing spatiotemporal cross-validation vs normal cross-validation.
 
 For any machine learning workflow, you want to including a resampling method that will train models on a couple different subsets of data as training and testing sets to reduce the role of chance and produce a more robust basis for evaluating the model's performance.
 
