--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1030,7 +1030,7 @@
 	langid = {en}
 }
 
-@article{turner2010a,
+@article{turner2010,
 	title = {Landslide densities associated with rainfall, stand age, and topography on forested landscapes, southwestern Washington, USA},
 	author = {Turner, Ted R. and Duke, Steven D. and Fransen, Brian R. and Reiter, Maryanne L. and Kroll, Andrew J. and Ward, Jim W. and Bach, Janette L. and Justice, Tiffany E. and Bilby, Robert E.},
 	year = {2010},
@@ -1043,4 +1043,260 @@
 	doi = {10.1016/j.foreco.2010.01.051},
 	url = {http://dx.doi.org/10.1016/j.foreco.2010.01.051},
 	langid = {en}
+}
+
+@article{sidle1991a,
+	title = {A Conceptual Model of Changes in Root Cohesion in Response to Vegetation Management},
+	author = {Sidle, Roy C.},
+	year = {1991},
+	month = {01},
+	date = {1991-01},
+	journal = {Journal of Environmental Quality},
+	pages = {43--52},
+	volume = {20},
+	number = {1},
+	doi = {10.2134/jeq1991.00472425002000010009x},
+	url = {http://dx.doi.org/10.2134/jeq1991.00472425002000010009x},
+	langid = {en}
+}
+
+@inbook{swanston1976,
+        title = {Timber harvesting, mass erosion, and steepland forest geomorphology in the Pacific Northwest},
+        author = {Swanston, D. N. and Swanson, F. J.},
+        year = {1976},
+        booktitle = {Geomorphology and Engineering},
+        publisher = {Dowden, Hutchinson & Ross, Inc.},
+        pages = {199-221}
+}
+
+@article{dunne1991,
+        title = {Stochastic aspects of the relations between cliimate, hydrology and landform evolution},
+        author = {Dunne, T.},
+        year = {1991},
+        journal = {Transactions, Japanese Geomorphological Union},
+        volume = {12},
+        number = {1}, 
+        pages = {1--24}
+} 
+
+@article{Amaranthus1985,
+        title = {Logging and forest roads rleated to increased dibris slides in Southwestern Oregon},
+        author = {Amaranthus, M. P. and Rice, R. M. and Barr, N. R. and Ziemer, R. R.},
+        year = {1985},
+        journal = {Journal of Forestry},
+        volume = {83},
+        number = {4},
+        pages = {229--233},
+        url = {https://academic.oup.com/jof/article-abstract/83/4/229/4644293}
+}
+
+@techreport{Gucinski2001,
+        title = {Forest roads: a synthesis of scientific information, General Technical Report PNW-GTR-509},
+        author = {Gucinski, H. and Furniss, M. J. and Ziemer, R. R. and Brookes, M. H.},
+        institution = {US Department of Agriculture, Forest Service, Pacific Northwest Research Station},
+        year = {2001}
+}
+
+@book{Florinsky2016,
+        author = {Florinsky, I. V.},
+        title = {Digital Terrain Analysis in Soil Science and Geology},
+        publisher = {Academic Press, Elsevier},
+        year = {2016}
+}
+        
+@article{shi2007,
+        author = {Shi, X. and Zhu, A. and Burt, J. and Choi, W. and Wang, R. and Pei, T. and Li, B. and Qin, C.},
+        title = {An experiment using a circular neighborhood to calculate slope gradient from a DEM},
+        journal = {Photogrammetric Engineering & Remote Sensing},
+        year = {2007},
+        volume = {73},
+        number = {2},
+        pages = {143--154}
+}
+
+@article{wilson2007,
+	title = {Comparison of the performance of flow-routing algorithms used in GIS-based hydrologic analysis},
+	author = {Wilson, John P. and Lam, Christine S. and Deng, Yongxin},
+	year = {2007},
+	date = {2007},
+	journal = {Hydrological Processes},
+	pages = {1026--1044},
+	volume = {21},
+	number = {8},
+	doi = {10.1002/hyp.6277},
+	url = {http://dx.doi.org/10.1002/hyp.6277},
+	langid = {en}
+}
+
+@inbook{wilson2008,
+        author = {Wilson, J. P. and Aggett, G. and Yongxin, D. and Lam, C. S.},
+        title = {Water in the landscape: a review of contemporary flow routing algorithms},
+        booktitle = {Advances in Digital Terrain Analysis},
+        publisher = {Springer},
+        year = {2008},
+        pages = {213--236}
+}
+@article{tarboton1997b,
+	title = {A new method for the determination of flow directions and upslope areas in grid digital elevation models},
+	author = {Tarboton, David G.},
+	year = {1997},
+	month = {02},
+	date = {1997-02},
+	journal = {Water Resources Research},
+	pages = {309--319},
+	volume = {33},
+	number = {2},
+	doi = {10.1029/96wr03137},
+	url = {http://dx.doi.org/10.1029/96WR03137},
+	langid = {en}
+}
+
+@article{riihimäki2021a,
+	title = {Topographic Wetness Index as a Proxy for Soil Moisture: The Importance of Flow{-}Routing Algorithm and Grid Resolution},
+	author = {{Riihimäki}, H. and Kemppinen, J. and {Kopecký}, M. and Luoto, M.},
+	year = {2021},
+	month = {10},
+	date = {2021-10},
+	journal = {Water Resources Research},
+	volume = {57},
+	number = {10},
+	doi = {10.1029/2021wr029871},
+	url = {http://dx.doi.org/10.1029/2021WR029871},
+	langid = {en}
+}
+
+@techreport{upsag2006,
+    title = {Landslide Hazard Zonation Project Protocol},
+	author = {Upslope Processes Science Advisory Group,},
+	institution = {Cooperative Monitoring, Evaluation, And Research committee of the Washington Forest Practices Board},
+	year = {2006},
+	ulr = {https://www.dnr.wa.gov/Publications/fp_lhz_protocol_v2_1_final.pdf}
+}
+@article{marc2019,
+	title = {Spatial Patterns of Storm{-}Induced Landslides and Their Relation to Rainfall Anomaly Maps},
+	author = {Marc, Odin and Gosset, Marielle and Saito, Hitoshi and Uchida, Taro and Malet, {Jean{-}Philippe}},
+	year = {2019},
+	month = {10},
+	date = {2019-10-28},
+	journal = {Geophysical Research Letters},
+	pages = {11167--11177},
+	volume = {46},
+	number = {20},
+	doi = {10.1029/2019gl083173},
+	url = {http://dx.doi.org/10.1029/2019gl083173},
+	langid = {en}
+}
+
+@article{reid2003,
+	title = {Magnitude and frequency of landsliding in a large New Zealand catchment},
+	author = {Reid, L.M and Page, M.J},
+	year = {2003},
+	month = {01},
+	date = {2003-01},
+	journal = {Geomorphology},
+	pages = {71--88},
+	volume = {49},
+	number = {1-2},
+	doi = {10.1016/s0169-555x(02)00164-2},
+	url = {http://dx.doi.org/10.1016/S0169-555X(02)00164-2},
+	langid = {en}
+}
+
+@article{thomas2023,
+	title = {The Rainfall Intensity{-}Duration Control of Debris Flows After Wildfire},
+	author = {Thomas, Matthew A. and Lindsay, Donald N. and Cavagnaro, David B. and Kean, Jason W. and McCoy, Scott W. and Graber, Andrew P.},
+	year = {2023},
+	month = {05},
+	date = {2023-05-23},
+	journal = {Geophysical Research Letters},
+	volume = {50},
+	number = {10},
+	doi = {10.1029/2023gl103645},
+	url = {http://dx.doi.org/10.1029/2023GL103645},
+	langid = {en}
+}
+
+@inproceedings{pack1998,
+    author = {Pack, R. T. and Tarboton D. G. and Goodwing, C. N.},
+    title = {The SINMAP approach to terrain stability mapping},
+	booktitle = {8th Congress of the International Association of Engineering Geology},
+	year = {1998},
+	url = {https://digitalcommons.usu.edu/cee_facpub/2583/}
+}
+	
+@article{swanson1975a,
+	title = {Impact of clear-cutting and road construction on soil erosion by landslides in the western Cascade Range, Oregon},
+	author = {Swanson, F. J. and Dyrness, C. T.},
+	year = {1975},
+	date = {1975},
+	journal = {Geology},
+	pages = {393},
+	volume = {3},
+	number = {7},
+	doi = {10.1130/0091-7613(1975)3<393:iocarc>2.0.co;2},
+	url = {http://dx.doi.org/10.1130/0091-7613(1975)3<393:IOCARC>2.0.CO;2},
+	langid = {en}
+}
+
+@article{strauch2018a,
+	title = {A hydroclimatological approach to predicting regional landslide probability using Landlab},
+	author = {Strauch, Ronda and Istanbulluoglu, Erkan and Nudurupati, Sai Siddhartha and Bandaragoda, Christina and Gasparini, Nicole M. and Tucker, Gregory E.},
+	year = {2018},
+	month = {02},
+	date = {2018-02-07},
+	journal = {Earth Surface Dynamics},
+	pages = {49--75},
+	volume = {6},
+	number = {1},
+	doi = {10.5194/esurf-6-49-2018},
+	url = {http://dx.doi.org/10.5194/esurf-6-49-2018},
+	langid = {en}
+}
+
+@article{schmidt2001a,
+	title = {The variability of root cohesion as an influence on shallow landslide susceptibility in the Oregon Coast Range},
+	author = {Schmidt, K M and Roering, J J and Stock, J D and Dietrich, W E and Montgomery, D R and Schaub, T},
+	year = {2001},
+	month = {10},
+	date = {2001-10-01},
+	journal = {Canadian Geotechnical Journal},
+	pages = {995--1024},
+	volume = {38},
+	number = {5},
+	doi = {10.1139/t01-031},
+	url = {http://dx.doi.org/10.1139/t01-031},
+	langid = {en}
+}
+
+@article{goetz2015a,
+	title = {Forest harvesting is associated with increased landslide activity during an extreme rainstorm on Vancouver Island, Canada},
+	author = {Goetz, J. N. and Guthrie, R. H. and Brenning, A.},
+	year = {2015},
+	month = {06},
+	date = {2015-06-22},
+	journal = {Natural Hazards and Earth System Sciences},
+	pages = {1311--1330},
+	volume = {15},
+	number = {6},
+	doi = {10.5194/nhess-15-1311-2015},
+	url = {http://dx.doi.org/10.5194/nhess-15-1311-2015},
+	langid = {en}
+}
+
+@article{Yordanov2020,
+    author = {Yordanov, V. and Brovelli, M. A.},
+	title = {Comparing model performance metrics for landslide susceptibility mapping},
+	journal = {International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+	volume = {43},
+	number = {3},
+	pages = {1277--1284}
+}
+
+@article{Chung2003,
+    author = {Chung, C. and Fabbri, A. G.},
+	title = {Validation of spatial prediction models for landslide hazard mapping},
+	journal = {Natural Hazards},
+	volume = {30},
+	pages = {451--472},
+	url = {https://www.researchgate.net/profile/Andrea-Fabbri-3/publication/226802573_Validation_of_Spatial_Prediction_Models_for_Landslide_Hazard_Mapping/links/00b49536d1d2219c6b000000/Validation-of-Spatial-Prediction-Models-for-Landslide-Hazard-Mapping.pdf}
 }
