Criteria_ISPR. Initial commit

--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1300,3 +1300,52 @@
 	pages = {451--472},
 	url = {https://www.researchgate.net/profile/Andrea-Fabbri-3/publication/226802573_Validation_of_Spatial_Prediction_Models_for_Landslide_Hazard_Mapping/links/00b49536d1d2219c6b000000/Validation-of-Spatial-Prediction-Models-for-Landslide-Hazard-Mapping.pdf}
 }
+
+@article{Iida1999,
+    author = {Iida, T.},
+    title = {A stochastic hydro-geomorphological model for shallow landsliding due to rainstorm},
+    journal = {Catena},
+    year = {1999},
+    volume = {34},
+    pages = {293--313}
+}
+
+@article{borga2002,
+    author = {Borga, M. and Fontana, G. D. and Cazorzi, F.},
+    title = {Analysis of topographic and climatic control on rainfall-triggered shallow landsliding using a quasi-dynamic wetness index},
+    journal = {Journal of Hydrology},
+    volume = {268},
+    pages = {56-71}
+}
+
+@article{iverson2000,
+    author = {Iverson, R. M.},
+    title = {Landslide triggering by rain infiltration},
+    journal = {Water Resources Research},
+    volume = {36},
+    number = {7},
+    pages = {1897--1910},
+}
+
+@article{wu1995,
+    author = {Wu, W. and Sidle, R. C.},
+    title = {A distributed slope stability model for steep forested basins},
+    journal = {Water Resources Research},
+    volume = {31},
+    number = {8},   
+    pages = {2097--2110}
+}
+@article{gupta2021,
+	title = {SoilKsatDB: global database of soil saturated hydraulic conductivity measurements for geoscience applications},
+	author = {Gupta, Surya and Hengl, Tomislav and Lehmann, Peter and Bonetti, Sara and Or, Dani},
+	year = {2021},
+	month = {04},
+	date = {2021-04-15},
+	journal = {Earth System Science Data},
+	pages = {1593--1612},
+	volume = {13},
+	number = {4},
+	doi = {10.5194/essd-13-1593-2021},
+	url = {http://dx.doi.org/10.5194/essd-13-1593-2021},
+	langid = {en}
+}
