--- a/analysis/PFA_initiation_take_a_look.qmd
+++ b/analysis/PFA_initiation_take_a_look.qmd
@@ -6,12 +6,12 @@ editor: visual
 ---
 
 ```{r}
-load("c:/tempDir/out/ls_1996_April11.Rdata")
-load("c:/tempDir/out/ls_2007_April11.Rdata")
-load("c:/tempDir/out/ls_2011_April11.Rdata")
-load("c:/tempDir/out/nonls_1996_April11.Rdata")
-load("c:/tempDir/out/nonls_2007_April11.Rdata")
-load("c:/tempDir/out/nonls_2011_April11.Rdata")
+load("c:/tempDir/out/ls_1996_200.Rdata")
+load("c:/tempDir/out/ls_2007_200.Rdata")
+load("c:/tempDir/out/ls_2011_200.Rdata")
+load("c:/tempDir/out/nonls_1996_200.Rdata")
+load("c:/tempDir/out/nonls_2007_200.Rdata")
+load("c:/tempDir/out/nonls_2011_200.Rdata")
 ls_2007$geo <- ls_2007$geo$GeoClass
 ls_2011$geo <- ls_2011$geo$GeoClass
 ls <- ls_1996
@@ -26,6 +26,8 @@ ls$geo <- as.factor(ls$geo)
 nonls$geo <- as.factor(nonls$geo)
 all_ls <- rbind(ls,nonls)
 all_ls$iclass <- ifelse(all_ls$class == "pos", 1, 0)
+all_ls200 <- all_ls
+save(all_ls200, file="c:/work/data/pfa/all_ls200.Rdata")
 
 ```
 
