--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1287,6 +1287,7 @@
     author = {Yordanov, V. and Brovelli, M. A.},
 	title = {Comparing model performance metrics for landslide susceptibility mapping},
 	journal = {International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+	year = {2020},
 	volume = {43},
 	number = {3},
 	pages = {1277--1284}
@@ -1295,6 +1296,7 @@
 @article{Chung2003,
     author = {Chung, C. and Fabbri, A. G.},
 	title = {Validation of spatial prediction models for landslide hazard mapping},
+	year = {2003},
 	journal = {Natural Hazards},
 	volume = {30},
 	pages = {451--472},
@@ -1332,6 +1334,7 @@
 @article{wu1995,
     author = {Wu, W. and Sidle, R. C.},
     title = {A distributed slope stability model for steep forested basins},
+	year = {1995},
     journal = {Water Resources Research},
     volume = {31},
     number = {8},   
@@ -1453,4 +1456,90 @@
 	journal = {Geological Society of America Abstracts with Programs},
 	doi = {10.1130/abs/2021am-368944},
 	url = {http://dx.doi.org/10.1130/abs/2021AM-368944}
+}
+
+@article{thornton2021,
+	title = {Gridded daily weather data for North America with comprehensive uncertainty quantification},
+	author = {Thornton, Peter E. and Shrestha, Rupesh and Thornton, Michele and Kao, Shih-Chieh and Wei, Yaxing and Wilson, Bruce E.},
+	year = {2021},
+	month = {07},
+	date = {2021-07-23},
+	journal = {Scientific Data},
+	volume = {8},
+	number = {1},
+	doi = {10.1038/s41597-021-00973-0},
+	url = {http://dx.doi.org/10.1038/s41597-021-00973-0},
+	langid = {en}
+}
+
+@article{ombadi2021,
+	title = {How much information on precipitation is contained in satellite infrared imagery?},
+	author = {Ombadi, Mohammed and Nguyen, Phu and Sorooshian, Soroosh and Hsu, Kuo-lin},
+	year = {2021},
+	month = {07},
+	date = {2021-07},
+	journal = {Atmospheric Research},
+	pages = {105578},
+	volume = {256},
+	doi = {10.1016/j.atmosres.2021.105578},
+	url = {http://dx.doi.org/10.1016/j.atmosres.2021.105578},
+	langid = {en}
+}
+
+@article{molter2021,
+	title = {Quantitative Precipitation Estimation of Extremes in CONUS With Radar Data},
+	author = {Molter, Edward M. and Collins, William D. and Risser, Mark D.},
+	year = {2021},
+	month = {08},
+	date = {2021-08-17},
+	journal = {Geophysical Research Letters},
+	volume = {48},
+	number = {16},
+	doi = {10.1029/2021gl094697},
+	url = {http://dx.doi.org/10.1029/2021gl094697},
+	langid = {en}
+}
+
+@article{rajulapati2020,
+	title = {Assessment of Extremes in Global Precipitation Products: How Reliable Are They?},
+	author = {Rajulapati, Chandra Rupa and Papalexiou, Simon Michael and Clark, Martyn P. and Razavi, Saman and Tang, Guoqiang and Pomeroy, John W.},
+	year = {2020},
+	month = {12},
+	date = {2020-12},
+	journal = {Journal of Hydrometeorology},
+	pages = {2855--2873},
+	volume = {21},
+	number = {12},
+	doi = {10.1175/jhm-d-20-0040.1},
+	url = {http://dx.doi.org/10.1175/jhm-d-20-0040.1}
+}
+
+@article{li2020,
+	title = {Cross-Examination of Similarity, Difference and Deficiency of Gauge, Radar and Satellite Precipitation Measuring Uncertainties for Extreme Events Using Conventional Metrics and Multiplicative Triple Collocation},
+	author = {Li, Zhi and Chen, Mengye and Gao, Shang and Hong, Zhen and Tang, Guoqiang and Wen, Yixin and Gourley, Jonathan J. and Hong, Yang},
+	year = {2020},
+	month = {04},
+	date = {2020-04-16},
+	journal = {Remote Sensing},
+	pages = {1258},
+	volume = {12},
+	number = {8},
+	doi = {10.3390/rs12081258},
+	url = {http://dx.doi.org/10.3390/rs12081258},
+	langid = {en}
+}
+
+@article{hobley2017,
+	title = {Creative computing with Landlab: an open-source toolkit for building, coupling, and exploring two-dimensional numerical models of Earth-surface dynamics},
+	author = {Hobley, Daniel E. J. and Adams, Jordan M. and Nudurupati, Sai Siddhartha and Hutton, Eric W. H. and Gasparini, Nicole M. and Istanbulluoglu, Erkan and Tucker, Gregory E.},
+	year = {2017},
+	month = {01},
+	date = {2017-01-16},
+	journal = {Earth Surface Dynamics},
+	pages = {21--46},
+	volume = {5},
+	number = {1},
+	doi = {10.5194/esurf-5-21-2017},
+	url = {http://dx.doi.org/10.5194/esurf-5-21-2017},
+	langid = {en}
 }
